<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/allbackgroundgradientlist"
    android:id="@+id/mainLayout"
    tools:context=".login">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <RelativeLayout
            android:id="@+id/kk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginStart="11dp"
            android:layout_marginLeft="11dp"
            android:padding="5dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="137dp"
                android:layout_height="128dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="120dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="120dp"
                android:contentDescription="@string/todo"
                app:layout_constraintBottom_toTopOf="@+id/username1"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.485"
                app:layout_constraintStart_toEndOf="@+id/guideline2"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/cutm"
                tools:ignore="ContentDescription" />

            <EditText
                android:id="@+id/username1"
                android:layout_width="176dp"
                android:layout_height="48dp"
                android:layout_below="@+id/imageView5"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="60dp"
                android:layout_toEndOf="@+id/imageView2"
                android:autofillHints=""
                android:background="@drawable/text_pass_style"
                android:ems="10"
                android:hint="@string/username"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/Password"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <Button
                android:id="@+id/login_btn"
                android:layout_width="117dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/registernowBtn"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="130dp"
                android:layout_marginTop="135dp"
                android:layout_marginEnd="130dp"
                android:backgroundTint="@android:color/holo_orange_light"
                android:elevation="40dp"
                android:text="@string/login"
                app:cornerRadius="20dp"
                app:iconPadding="10dp"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/Password" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="185dp"
                android:layout_height="48dp"
                android:layout_below="@+id/username1"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="5dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="60dp"
                android:layout_toEndOf="@+id/imageView3"
                android:autofillHints=""
                android:background="@drawable/text_pass_style"
                android:ems="10"
                android:hint="@string/enter_password"
                android:inputType="textPassword"
                android:textAlignment="center"
                android:textColorHint="@color/black"
                app:layout_constraintBottom_toTopOf="@+id/login_btn"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.482"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@+id/username1" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.24" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.76" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="37dp"
                android:layout_height="29dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_marginStart="29dp"
                android:layout_marginLeft="27dp"
                android:layout_marginTop="352dp"
                android:contentDescription="@string/todo1"
                app:layout_constraintBottom_toTopOf="@+id/imageView3"
                app:layout_constraintEnd_toStartOf="@+id/username1"
                app:layout_constraintHorizontal_bias="0.779"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/username1"
                app:layout_constraintVertical_bias="0.092"
                app:srcCompat="@drawable/user_icon"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="40dp"
                android:layout_height="32dp"
                android:layout_below="@+id/imageView2"
                android:layout_alignParentStart="true"
                android:layout_marginStart="27dp"
                android:layout_marginTop="47dp"
                android:contentDescription="@string/todoa"
                app:layout_constraintBottom_toBottomOf="@+id/Password"
                app:layout_constraintEnd_toStartOf="@+id/Password"
                app:layout_constraintHorizontal_bias="0.917"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/password_user"
                tools:ignore="ContentDescription" />

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="44dp"
                android:layout_height="48dp"
                android:layout_below="@+id/imageView"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="170dp"
                android:layout_marginTop="100dp"
                android:layout_marginEnd="170dp"
                android:contentDescription="@string/todos"
                app:layout_constraintEnd_toStartOf="@+id/guideline2"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="@+id/guideline1"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/user_login"
                tools:ignore="ContentDescription" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="55dp"
                android:layout_height="49dp"
                android:layout_below="@+id/login_btn"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="171dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="170dp"
                android:adjustViewBounds="true"
                android:background="@null"
                android:contentDescription="@string/login"
                android:scaleType="centerInside"
                android:src="@drawable/cutm_only_logo" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="184dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/imageButton2"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="121dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="120dp"
                android:hint="Sign up with cutm"
                android:textAlignment="center" />

            <TextView
                android:id="@+id/registernowBtn"
                android:layout_width="108dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/Password"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="27dp"
                android:layout_marginTop="28dp"
                android:layout_marginEnd="200dp"
                android:clickable="true"
                android:elevation="30dp"
                android:fadingEdge="vertical"
                android:fontFamily="@font/amaranth"
                android:hapticFeedbackEnabled="true"
                android:text="Register now"
                android:textAlignment="inherit"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textStyle="bold" />

        </RelativeLayout>
    </ScrollView>
</ScrollView>